--- a/index.html
+++ b/index.html
@@ -43,15 +43,20 @@
         z-index: 10;
       }
       .top-buttons { display: flex; gap: 16px; }
+      
+      /* --- UPDATED TOP BUTTONS --- */
       .top-btn {
-        width: 60px;
+        /* width: 60px; */ /* Removed fixed width */
+        padding-inline: 24px; /* Makes buttons wider */
         height: 46px;
         border-radius: 14px;
-        border: 0;
+        /* border: 0; */ /* Removed */
+        border: 3px solid rgba(0, 0, 0, 0.2); /* Added strong border */
         display: inline-flex;
         align-items: center;
         justify-content: center;
-        box-shadow: inset 0 1px 0 rgba(255,255,255,.25), 0 4px 10px rgba(0,0,0,.15);
+        /* Updated shadow for more depth */
+        box-shadow: inset 0 2px 1px rgba(255,255,255,.35), 0 4px 10px rgba(0,0,0,.25);
       }
       .top-btn.purple { background: #7c3aed; }
       .top-btn.teal { background: #14b8a6; }
@@ -183,7 +188,7 @@
         background: radial-gradient(circle at 30% 30%, #fff3b0, #ffb800 55%, #d98200 95%);
         border: 1px solid rgba(255, 255, 255, .52);
         box-shadow: 0 10px 25px rgba(0,0,0,.5);
-        transition: transform .12s ease-out;
+        transition: transform .12s ease-out, width .12s ease-out, height .12s ease-out; /* Added transition */
       }
       .action-button:active {
         transform: scale(.92);
@@ -201,10 +206,27 @@
       .character-wrap + * {
         display: none;
       }
+
+      /* --- UPDATED MEDIA QUERY --- */
       @media (max-width: 420px) {
         .app-shell { max-width: 100vw; }
         .top-blank-space { height: clamp(140px, 20vh, 220px); }
-        .character-frame { max-width: 240px; }
+        
+        /* Make character frame smaller, as requested */
+        .character-frame { max-width: 210px; } 
+
+        /* Adjust layout to give button more space */
+        .character-wrap {
+            gap: 8px; /* Reduce gap */
+            padding-left: 8px; /* Reduce side padding */
+            padding-right: 8px;
+        }
+        .action-button {
+            /* Scale button down slightly on small screens */
+            width: 72px;
+            height: 72px;
+            margin-right: 4px; /* Reduce margin from edge */
+        }
       }
     </style>
   </head>
@@ -276,7 +298,7 @@
           actionBtn.classList.add('is-pulsing');
         });
       }
-      });
+      /* (Removed extra closing bracket here) */
     </script>
   </body>
 </html>
