--- a/index.html
+++ b/index.html
@@ -49,15 +49,17 @@
       /* --- UPDATED TOP BUTTONS --- */
       .top-btn {
         /* width: 60px; */ /* Removed fixed width */
-        /* padding-inline: 24px; */ /* Makes buttons wider */
-        padding-inline: 30px; /* Wider */
-        /* height: 46px; */
-        height: 50px; /* Taller */
+        /* padding-inline: 30px; */ /* No longer needed, using width/height */
+        width: 55px; /* Set fixed width for square button */
+        /* height: 50px; */ /* Taller */
+        height: 55px; /* Taller and square */
+        padding: 0; /* Remove padding */
         border-radius: 14px;
         /* border: 3px solid rgba(0, 0, 0, 0.2); */ /* Added strong border */
         border-width: 3px; /* Kept border size */
         border-style: solid; /* Color will be set by class */
-        background: rgba(0, 0, 0, 0.4); /* Black inside */
+        /* background: rgba(0, 0, 0, 0.4); */ /* Black inside */
+        background: #000; /* Solid black inside */
         display: inline-flex;
         align-items: center;
         justify-content: center;
@@ -69,6 +71,13 @@
       .top-btn.teal { /* background: #14b8a6; */ border-color: #14b8a6; }
       .top-btn.pink { /* background: #ec4899; */ border-color: #ec4899; }
       .top-btn.white { /* background: #fff; */ border-color: #fff; }
+
+      /* --- Style for images in top buttons --- */
+      .top-btn img {
+        height: 65%;
+        width: 65%;
+        object-fit: contain;
+      }
 
       /* Bordered window under the yellow bar */
       .top-blank-space {
@@ -241,10 +250,10 @@
     <div class="app-shell">
       <div class="top-bar">
         <div class="top-buttons">
-          <button class="top-btn purple" aria-label="Purple action"></button>
-          <button class="top-btn teal" aria-label="Teal action"></button>
-          <button class="top-btn pink" aria-label="Pink action"></button>
-          <button class="top-btn white" aria-label="White action"></button>
+          <button class="top-btn purple" aria-label="Crystal Ball"><img src="New Folder/crystal-ball.png" alt="Crystal Ball"></button>
+          <button class="top-btn teal" aria-label="Shamrock"><img src="New Folder/shamrock.png" alt="Shamrock"></button>
+          <button class="top-btn pink" aria-label="Nested Hearts"><img src="New Folder/nested-hearts.png" alt="Nested Hearts"></button>
+          <button class="top-btn white" aria-label="Elf Helmet"><img src="New Folder/elf-helmet.png" alt="Elf Helmet"></button>
         </div>
       </div>
       <div class="top-blank-space"></div>
