--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
             <div class="side-cell"></div>
           </div>
           <div class="character-frame">
-            <img src="New Folder/flower.jpg" alt="Character" />
+            <img src="New Folder/darkelf.jpg" alt="Character" />
           </div>
           <button class="action-button" type="button" aria-label="Primary Action"></button>
         </div>
@@ -318,4 +318,5 @@
     </script>
   </body>
 </html>
+
 
