--- a/index.html
+++ b/index.html
@@ -332,6 +332,7 @@
         align-self: center;
         width: 78px;
         height: 78px;
+        flex-shrink: 0; /* <-- This line prevents the button from shrinking */
         border-radius: 999px;
         background: radial-gradient(
           circle at 30% 30%,
@@ -760,4 +761,5 @@
     </script>
   </body>
 </html>
+
 
